<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tf_task_name"
        android:layout_width="300dp"
        android:layout_height="75dp"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/add_tarea_et_nombre"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_titulo">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_task"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <Spinner
        android:id="@+id/sp_categoria"
        android:layout_width="284dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sb_time" />

    <CheckBox
        android:id="@+id/cb_prioridad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/prioridad_cb"
        app:layout_constraintEnd_toEndOf="@+id/sp_categoria"
        app:layout_constraintStart_toStartOf="@+id/sp_categoria"
        app:layout_constraintTop_toBottomOf="@+id/sp_categoria" />


    <com.google.android.material.slider.Slider
        android:id="@+id/sb_time"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:stepSize="30.0"
        android:valueFrom="0.0"
        android:valueTo="300.0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tf_task_name" />

    <TextView
        android:id="@+id/tv_titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/label_title_add_task"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_enviar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:backgroundTint="#d0bdf6"
        android:maxLines="1"
        android:text="@string/send_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cb_prioridad" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/sb_time"
        app:layout_constraintEnd_toStartOf="@+id/sb_time"
        app:layout_constraintTop_toTopOf="@+id/sb_time"
        app:srcCompat="@drawable/baseline_timer_24" />
</androidx.constraintlayout.widget.ConstraintLayout>